--- a/hodina2/index.html
+++ b/hodina2/index.html
@@ -7,72 +7,38 @@
     <title>Document</title>
 </head>
 <body>
-    <ul>
-        <li>dededadjaisdjisndjsandsjjddjdjdjdis</li>
-    </ul>
-    <ul>
-        <li>dededadjaisdjisndjsandsjjddjdjdjdis</li>
-    </ul>
-    <ul>
-        <li>dededadjaisdjisndjsandsjjddjdjdjdis</li>
-    </ul>
-    <ul>
-        <li>dededadjaisdjisndjsandsjjddjdjdjdis</li></ul>
-    <ul><li>dededadjaisdjisndjsandsjjddjdjdjdis</li></ul>
-    <ul><li>dededadjaisdjisndjsandsjjddjdjdjdis</li></ul>
-    <ul><li>dededadjaisdjisndjsandsjjddjdjdjdis</li></ul>
-    <ul><li>dededadjaisdjisndjsandsjjddjdjdjdis</li></ul>
-    <ul><li>dededadjaisdjisndjsandsjjddjdjdjdis</li></ul>
-    <ul><li>dededadjaisdjisndjsandsjjddjdjdjdis</li></ul>
-    <ul><li>dededadjaisdjisndjsandsjjddjdjdjdis</li></ul>
-    <ul><li>dededadjaisdjisndjsandsjjddjdjdjdis</li></ul>
-    <ul><li><ul><li>mkcmskmsamksmkasmdkmsakdmskdmask</li></ul></li></ul>
-    <ul><li><ul><li>mkcmskmsamksmkasmdkmsakdmskdmask</li></ul></li></ul>
-    <ul><li><ul><li>mkcmskmsamksmkasmdkmsakdmskdmask</li></ul></li></ul>
-    <ul><li><ul><li>mkcmskmsamksmkasmdkmsakdmskdmask</li></ul></li></ul>
-    <ul><li><ul><li>mkcmskmsamksmkasmdkmsakdmskdmask</li></ul></li></ul>
-    <ul><li><ul><li>mkcmskmsamksmkasmdkmsakdmskdmask</li></ul></li></ul>
-    <ul><li><ul><li>mkcmskmsamksmkasmdkmsakdmskdmask</li></ul></li></ul>
-    
-
-    <ol>
-        <li>
-            dedeedede
-        </li>
-        <li>
-            fsadsadsakdas
-        </li>
-        <li>dsadsadjaisdas
-
-        </li>
-        <li>dsadsadjaisdas
-
-        </li>
-        <li>dsadsadjaisdas
-
-        </li>
-        <li>dsadsadjaisdas
-
-        </li>
-        <li>dsadsadjaisdas 
-            <ol>
-                <li>
-                    evaecasc
-                </li>
-                <li>
-                    evaecasc
-                </li>
-                <li>
-                    evaecasc
-                </li>
-            </ol>
+<h1>Zoznam</h1>
+<ul>
+    <li>sfsajdsadf</li>
+    <li>sfsajdsadf</li>
+    <li>sfsajdsadf</li>
+    <li>sfsajdsadf</li>
+    <li>
+        <ul>
+            <li>mkasdsjafsa</li>
+            <li>mkasdsjafsa</li>
+            <li>mkasdsjafsa</li>
+            <li>mkasdsjafsa</li>
+            <li>mkasdsjafsa</li>
+            <li>mkasdsjafsa</li>
+        </ul>
+    </li>
+</ul>
+<ol>
+    <li>bidhsabdsbda</li>
+    <li>bidhsabdsbda</li>
+    <li>bidhsabdsbda</li>
+    <li>
+        <ol>
+            <li>jojojojojojojo</li>
+            <li>jojojojojojojo</li>
+            <li>jojojojojojojo</li>
+            <li>jojojojojojojo</li>
+            <li>jojojojojojojo</li>
         </ol>
-
-        </li>
-
-    </ol>
-
-
-    
+    </li>
+    <li>bidhsabdsbda</li>
+    <li>bidhsabdsbda</li>
+</ol>
 </body>
 </html>
